# setup-qt-cmake

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  test.yaml
cmake/: SetupQt.cmake  SetupQtConfig.cmake
test/: BuildExampleTest.cmake  CMakeLists.txt  build_example.cmake  setup_qt.cmake
test/cmake/: BuildExampleTest.cmake  SetupQtTest.cmake
